--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+blockquote {
+  border: 3px solid #cccccc;
+  border-radius: 15px;
+  padding: 5px 10px;
+  font-size: 150%;
+  font-weight: 500;
+  color: black;
+}
+
+blockquote footer:before {
+  content: '-'
+}
+
+blockquote footer {
+  font-size: 75%;
+  font-weight: normal;
+  color: #55aaaa;
+}
+
+input {
+  width: 300px;
+  height: 30px;
+  border-radius: 7px;
+  font-size: 24px;
+  border: 2px solid gray;
+}
+
+input[type=submit] {
+  font-size: 18px;
+}
